Correction leave social coke 100ans + correction fond z-index -2

--- a/assets/css/soSteezy.css
+++ b/assets/css/soSteezy.css
@@ -1151,7 +1151,7 @@ section .page-content {
 }
 .pagination li a.active:before {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=30);
+  filter: alpha(opacity=100);
   -moz-opacity: 1;
   -o-opacity: 1;
   -khtml-opacity: 1;
@@ -1160,7 +1160,7 @@ section .page-content {
 }
 .pagination li a:hover:before {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=30);
+  filter: alpha(opacity=100);
   -moz-opacity: 1;
   -o-opacity: 1;
   -khtml-opacity: 1;
@@ -6299,7 +6299,7 @@ menu.openMenu {
 }
 #transition-social-coke {
   position: fixed;
-  z-index: -1;
+  z-index: -2;
   top: 0;
   left: 0;
   bottom: 0;
